fix: rebuild macOS helper as persistent stdin-driven process
The old helper spawned a fresh process per mouse/key event via
Runtime.exec(), leaking file descriptors and zombie processes until
input eventually stopped firing or fired minutes late. It's now a
single long-lived process fed one command per line over stdin.